# ctci

./: CMakeLists.txt  README.md
diary/: CoolList.md
src/: main.cpp
src/chapter1/: CMakeLists.txt  exercise1.cpp  main.cpp
src/chapter1/exercise1/: README.md  main.cpp
src/chapter1/exercise11/: main.cpp
src/chapter1/exercise2/: README.md  main.cpp
src/chapter1/exercise3/: README.md  main.cpp
src/chapter1/exercise4/: README.md  main.cpp
src/chapter1/exercise5/: main.cpp
src/chapter1/exercise6/: README.md  main.cpp
src/chapter1/exercise7/: README.md  main.cpp
src/chapter1/exercise8/: README.md  main.cpp
src/chapter1/exercise9/: README.md  main.cpp
src/chapter10/: CMakeLists.txt  main.cpp
src/chapter10/exercise1/: README.md  RotatingStack.cpp  RotatingStack.h  SortedMerge.cpp  SortedMerge.h
src/chapter10/exercise4/: Listy.cpp  Listy.h  README.md  SortedSearchNoSize.cpp  SortedSearchNoSize.h
src/chapter14/: Dump.sql  database.sql  model.mwb  model.mwb.bak
src/chapter14/exercise1/: MultipleApartments.sql
src/chapter14/exercise2/: OpenRequests.sql
src/chapter14/exercise3/: CloseRequestInBuildings.sql
src/chapter14/exercise4/: README.md
src/chapter14/exercise5/: README.md
src/chapter14/exercise6/: README.md
src/chapter14/exercise7/: README.md
src/chapter15/: CMakeLists.txt  README.md  main.cpp
src/chapter15/exercise1/: README.md
src/chapter15/exercise2/: README.md
src/chapter15/exercise3/: Chopstick.cpp  Chopstick.h  Philosopher.cpp  Philosopher.h  README.md  Seat.cpp  Seat.h  Table.cpp  Table.h  main.cpp
src/chapter15/exercise4/: README.md
src/chapter15/exercise5/: README.md  main.cpp
src/chapter15/exercise6/: README.md
src/chapter15/exercise7/: README.md  main.cpp
src/chapter16/: CMakeLists.txt  main.cpp
src/chapter16/exercise1/: README.md
src/chapter16/exercise10/: README.md  main.cpp
src/chapter16/exercise11/: README.md  main.cpp
src/chapter16/exercise12/: README.md  main.cpp
src/chapter16/exercise13/: README.md  main.cpp
src/chapter16/exercise14/: README.md
src/chapter16/exercise16/: README.md
src/chapter16/exercise17/: README.md  main.cpp
src/chapter16/exercise18/: README.md  main.cpp
src/chapter16/exercise19/: README.md  main.cpp
src/chapter16/exercise2/: README.md
src/chapter16/exercise20/: README.md  main.cpp
src/chapter16/exercise21/: README.md  main.cpp
src/chapter16/exercise22/: README.md  main.cpp
src/chapter16/exercise23/: README.md  main.cpp
src/chapter16/exercise24/: README.md  main.cpp
src/chapter16/exercise25/: README.md  main.cpp
src/chapter16/exercise26/: README.md  main.cpp
src/chapter16/exercise3/: README.md  main.cpp
src/chapter16/exercise4/: README.md  main.cpp
src/chapter16/exercise5/: README.md  main.cpp
src/chapter16/exercise6/: README.md  main.cpp
src/chapter16/exercise7/: README.md  main.cpp
src/chapter16/exercise8/: README.md  main.cpp
src/chapter16/exercise9/: README.md  main.cpp
src/chapter17/: CMakeLists.txt  main.cpp
src/chapter17/exercise1/: main.cpp
src/chapter17/exercise10/: README.md  main.cpp
src/chapter17/exercise12/: README.md  main.cpp
src/chapter17/exercise13/: DocumentRespaceAlgorithm.cpp  DocumentRespaceAlgorithm.h  DocumentRespaceSolution.cpp  DocumentRespaceSolution.h  README.md  Trine.cpp  Trine.h  main.cpp
src/chapter17/exercise5/: main.cpp
src/chapter17/exercise6/: main.cpp
src/chapter2/: CMakeLists.txt  main.cpp
src/chapter2/exercise1/: README.md  main.cpp
src/chapter2/exercise2/: README.md  main.cpp
src/chapter2/exercise3/: README.md  main.cpp
src/chapter2/exercise4/: main.cpp
src/chapter2/exercise5/: README.md  main.cpp
src/chapter2/exercise6/: README.md  main.cpp
src/chapter2/exercise7/: README.md  main.cpp
src/chapter2/exercise8/: README.md
src/chapter3/: CMakeLists.txt  main.cpp
src/chapter3/exercise_03_1/: README.md  main_03_1.cpp
src/chapter3/exercise_03_2/: main_03_2.cpp
src/chapter3/old/: library.h
src/chapter4/: CMakeLists.txt  GraphNode.h  main.cpp
src/chapter4/exercise_04_1/: main_04_1.cpp
src/chapter4/old/: GraphNode.cpp  main.cpp
src/chapter5/: CMakeLists.txt  exercise52.cpp  exercise53.cpp  exercise54.cpp  exercise55.cpp  exercise56.cpp  exercise57.cpp  exercise58.cpp  main.cpp
src/chapter7/: CMakeLists.txt
src/chapter7/exercise1/: Blackjack.h  Card.cpp  Card.h  Deck.cpp  README.md  blackjack.cpp  deck.h
src/chapter7/exercise11/: Filesystem.cpp  Filesystem.h  README.md
src/chapter7/exercise2/: CallCenter.cpp  CallCenter.h  CallHandler.cpp  CallHandler.h  CallRank.cpp  CallRank.h  Caller.cpp  Caller.h  Employee.cpp  Employee.h  README.md  main.cpp
src/chapter8/: CMakeLists.txt  main.cpp
src/chapter8/exercise_08_01/: README.md  main_08_01.cpp
